--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -251,6 +251,15 @@ img {
 .p-25 {
   padding: 25px;
 }
+.p-50 {
+  padding: 50px;
+}
+.p-80 {
+  padding: 80px;
+}
+.p-100 {
+  padding: 100px;
+}
 /* ************* */
 /* padding-y  */
 .p-y-10 {
@@ -375,6 +384,9 @@ img {
 }
 .m-b-20 {
   margin-bottom: 20px;
+}
+.m-b-40 {
+  margin-bottom: 40px;
 }
 .m-b-60 {
   margin-bottom: 60px;
