--- a/assets/styles/main-moviepage.css
+++ b/assets/styles/main-moviepage.css
@@ -165,13 +165,16 @@
 /* //////////////latest-news/////////////// */
 .latest-news {
   background-color: #151515;
-  bottom: 1px solid #545454;
+  border-bottom: 1px solid #545454;
 }
 .latest-news ul li .content {
   font-size: 14px;
 }
 .latest-news ul li .content span {
   font-weight: 500;
+}
+.latest-news ul li .content a {
+  transition: all 0.2s;
 }
 .latest-news ul li .content a:hover {
   color: #e6252a;
@@ -181,3 +184,74 @@
   transform: translateX(-50%);
 }
 /* //////////////overview/////////////// */
+.overview {
+  width: 100%;
+  height: 100vh;
+  max-height: 400px;
+}
+.overview:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  max-height: 400px;
+  background-color: #000;
+  z-index: -1;
+}
+
+.overview:after {
+  content: "";
+  position: absolute;
+  bottom: -30;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #fff;
+  transform: rotate(-1deg);
+  clip-path: polygon(0 0, 0 100%, 100% 92%, 100% 0);
+}
+.logo-back {
+  width: 100%;
+  height: 100%;
+}
+.logo-back:before {
+  content: "";
+  left: 50%;
+  top: 50%;
+  width: 326px;
+  height: 163px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  background-image: url(../photos/movie-page/themarvels_lob_log_div_02.png);
+  background-size: fill;
+  z-index: 3;
+}
+.overview-content {
+  background-color: #fff;
+  margin-top: -80px;
+  font-size: 16px;
+  font-weight: 300;
+}
+.description li p {
+  font-size: 16px;
+}
+.description ul li p:first-child {
+  font-size: 12px;
+  font-weight: 600;
+  color: #767676;
+  margin-bottom: 5px;
+}
+.description ul li p:last-child {
+  font-size: 14px;
+  font-weight: 400;
+}
+/* photo-gallery */
+.photo-gallery ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
+  column-gap: 20px;
+  row-gap: 10px;
+}
