--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -476,6 +476,12 @@ img {
 .z-3 {
   z-index: 3;
 }
+.z-2 {
+  z-index: 2;
+}
+.z-1 {
+  z-index: 1;
+}
 .dark {
   content: "";
   position: absolute;
@@ -618,4 +624,18 @@ img {
   background-color: #e6252a;
   display: inline-block;
   transform: translateY(-50%);
+}
+/* /////////////animation///////////// */
+@keyframes move {
+  from {
+    top: 0;
+    left: 0;
+  }
+  to {
+    top: 100%;
+    left: 100%;
+  }
+}
+.z-100 {
+  z-index: 100;
 }
