--- a/assets/styles/main-moviepage.css
+++ b/assets/styles/main-moviepage.css
@@ -247,11 +247,74 @@
   font-size: 14px;
   font-weight: 400;
 }
-/* photo-gallery */
+/* ////////////photo-gallery///////////// */
 .photo-gallery ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* grid-template-rows: repeat(4, 1fr); */
-  column-gap: 20px;
-  row-gap: 10px;
+  column-gap: 10px;
+  row-gap: 5px;
+}
+.photo-gallery ul li {
+  transition: all 0.2s;
+}
+.photo-gallery ul li img {
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+}
+.photo-gallery ul li:hover {
+  transform: scale(1.15);
+  box-shadow: 0 5px 15px 7px rgba(0, 0, 0, 0.4);
+  position: relative;
+  z-index: 8;
+  background-color: #fff;
+}
+.photo-gallery .btn {
+  left: 50%;
+  transform: translateX(-50%);
+}
+/* /////////////characters////////////// */
+.characters ul li .text {
+  width: 100%;
+  height: 160px;
+  clip-path: polygon(0 0, 100% 0, 100% 95%, 95% 100%, 0 100%);
+  overflow: hidden;
+  border-top: 4px solid red;
+  z-index: 3;
+  position: relative;
+}
+
+.hover-box {
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(0 0, 100% 0, 100% 95%, 95% 100%, 0 100%);
+}
+.hover-box:before {
+  background: #e62429;
+  bottom: 100%;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition: transform 0.3s;
+  width: 100%;
+  z-index: -1;
+}
+.characters li:hover .hover-box:before {
+  transform: translate3d(0, 100%, 0);
+}
+.characters li {
+  background-color: #000;
+  clip-path: polygon(0 0, 100% 0, 100% 95%, 95% 100%, 0 100%);
+}
+.characters li .img-wraper {
+  overflow: hidden;
+}
+.characters li img {
+  transition: all 0.3s;
+  border-bottom: 2px solid #e62429;
+}
+.characters li:hover img {
+  transform: scale(1.05);
 }
