--- a/assets/styles/main-moviepage.css
+++ b/assets/styles/main-moviepage.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100vh;
   max-height: 400px;
-  background-image: url(../photos/);
+  background-image: url(../photos/movie-page/logo-bg.png);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
