--- a/assets/styles/main-internalpage.css
+++ b/assets/styles/main-internalpage.css
@@ -62,7 +62,7 @@
   color: #151515;
 }
 /* ////////// final-trailer //////////*/
-/* ****** trailer-common-codes ****** */
+/* ****** trailer-common-codes ***** */
 .icon-logo {
   width: 40px;
   height: 40px;
