--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -37,8 +37,7 @@ h6 {
 }
 
 h1 {
-  font-family: 500 44px/1 RobotoCondensed Bold, Trebuchet MS, Helvetica, Arial,
-    sans-serif;
+  font-family: RobotoCondensed Bold, Trebuchet MS, Helvetica, Arial, sans-serif;
   line-height: 1;
 }
 
