changing skew-brow font-family

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -2,6 +2,10 @@
 *:after,
 *:before {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
 }
 body {
   font-family: Roboto, Trebuchet MS, Helvetica, Arial, sans-serif;
@@ -493,22 +497,14 @@ img {
 .z-1 {
   z-index: 1;
 }
-.dark {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  max-height: 500px;
-  background-color: rgba(0, 0, 0, 0.2);
-}
+
 /* //////////// eyebrow //////////// */
 .skew-brow {
-  font: 400 18px/19px RobotoCondensed Bold;
-  letter-spacing: 4;
+  font: 800 26px/1 RobotoCondensed, Trebuchet MS, Helvetica, Arial, sans-serif;
+  letter-spacing: 1;
   position: relative;
   z-index: 3;
+  color: #202020;
 }
 .skew-brow:before {
   background-color: #c6a972;
@@ -540,11 +536,6 @@ img {
 }
 /*//////////////// background /////////// */
 .bg-img img {
-  /* background-image: url(../photos/20221227-newtomu_base_set_dsk.jpg);
-  background-size: cover;
-  background-position: center right;
-  background-repeat: no-repeat;
-  height: 100%; */
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -594,6 +585,16 @@ img {
   font-weight: 400;
   letter-spacing: 0.2;
 }
+.dark {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  max-height: 500px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 /*/////////////// movie-list //////////////*/
 .movie-list {
   padding: 20px;
@@ -635,15 +636,4 @@ img {
   background-color: #e6252a;
   display: inline-block;
   transform: translateY(-50%);
-}
-/* /////////////animation///////////// */
-@keyframes move {
-  from {
-    top: 0;
-    left: 0;
-  }
-  to {
-    top: 100%;
-    left: 100%;
-  }
 }
