add banner details for homepage and serachpage

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -388,6 +388,9 @@ img {
 .m-y-60 {
   margin: 60px 0;
 }
+.m-y-100 {
+  margin: 100px 0;
+}
 /* ************* */
 /* margin-bottom  */
 
@@ -635,4 +638,13 @@ img {
   background-color: #e6252a;
   display: inline-block;
   transform: translateY(-50%);
+}
+/* ////////////// banner //////////// */
+.banner {
+  width: 728px;
+  height: 90px;
+  margin: 50px auto;
+  color: #767676;
+  letter-spacing: 2;
+  font-size: 11px;
 }
