--- a/assets/styles/main-homepage.css
+++ b/assets/styles/main-homepage.css
@@ -137,16 +137,7 @@
   color: #151515;
 }
 
-/* /////////// advertisement ///////////// */
-.advertisement .banner {
-  width: 728px;
-  height: 90px;
-  margin: 50px auto;
-  color: #767676;
-  letter-spacing: 2;
-  font-size: 11px;
-}
-/* ///////////////latest-hype ///////////// */
+/* /////////////latest-hype ///////////// */
 
 /* *********** */
 /* latest-list */
@@ -164,6 +155,10 @@
 .latest-hype .latest-list ul li .text-wrapper p {
   font-size: 20px;
   font-weight: 500;
+  transition: color 0.2s;
+}
+.latest-hype .latest-list ul li .text-wrapper p:hover {
+  color: #e6252a;
 }
 .latest-hype .latest-list .btn {
   left: 50%;
@@ -188,6 +183,10 @@
 .hype-box ul .text-wrapper p {
   font-size: 14px;
   font-weight: 600;
+  transition: color 0.2s;
+}
+.hype-box ul .text-wrapper p:hover {
+  color: #e6252a;
 }
 /* //////////new-comics///////////// */
 .hype-box .icon-top {
@@ -274,13 +273,7 @@
 .bottom-section li p:hover {
   color: rgba(255, 255, 255, 0.5);
 }
-.bottom-section li:nth-child(2) p {
-  /* margin-bottom: 10px;
-  font-size: 13px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: color 0.2s; */
-}
+
 .bottom-section li:nth-child(3) p {
   font-weight: 300;
 }
@@ -301,4 +294,114 @@
 }
 .bottom-section .sub-footer ul li:hover {
   color: #fff;
+}
+/* ///////// hidden-details ///// */
+.hidden-details .gallery-wrapper {
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+/* ************ */
+/* big poster */
+/* ************ */
+.hidden-details .gallery-wrapper .big-poster .img-wrapper {
+  width: 100%;
+  height: 100%;
+}
+.hidden-details .gallery-wrapper .big-poster .img-wrapper img {
+  height: 100%;
+}
+.hidden-details .gallery-wrapper .big-poster .img-wrapper .play-icon {
+  position: absolute;
+  color: red;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 3%;
+  transition: background-color 1s;
+  font-size: 22px;
+}
+.hidden-details .gallery-wrapper .big-poster .img-wrapper:hover .play-icon {
+  background-color: #e6252a;
+  color: #fff;
+}
+
+/* ************ */
+/* small poster */
+/* ************ */
+
+.hidden-details .gallery-wrapper .small-poster ul {
+  width: 100%;
+  height: 100%;
+}
+.hidden-details .gallery-wrapper .small-poster .focused .img-wrapper img {
+  border: 2px solid red;
+  opacity: 1;
+}
+.hidden-details .gallery-wrapper .small-poster .img-wrapper img {
+  opacity: 0.3;
+}
+.hidden-details .gallery-wrapper .small-poster .img-wrapper:hover img {
+  opacity: 1;
+}
+.hidden-details
+  .gallery-wrapper
+  .small-poster
+  .img-wrapper:hover
+  .text-wrapper {
+  opacity: 0;
+}
+.hidden-details .gallery-wrapper .small-poster .img-wrapper .play-icon {
+  position: absolute;
+  color: red;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  padding: 3%;
+  transition: background-color 0.5s;
+  font-size: 10px;
+}
+.hidden-details .gallery-wrapper .small-poster .img-wrapper:hover .play-icon {
+  background-color: #e6252a;
+  color: #fff;
+}
+.hidden-details .gallery-wrapper .small-poster .text-wrapper {
+  position: absolute;
+  bottom: 5%;
+  left: 30%;
+  transform: translateX(-30%);
+  width: 60%;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.hidden-details .description span {
+  font-size: 12px;
+  font-weight: 600;
+  color: #6d6d6d;
+}
+.hidden-details .description div {
+  font-size: 26px;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+/* ************ */
+/* v line */
+/* ************ */
+.hidden-details .gallery-wrapper .v-line {
+  width: 2px;
+  height: 100%;
+  background-color: #f2f2f2;
+  position: relative;
+}
+.hidden-details .gallery-wrapper .v-line:before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 4px;
+  height: 20%;
+  background-color: #e6252a;
+  position: absolute;
 }
