--- a/assets/styles/main-internalpage.css
+++ b/assets/styles/main-internalpage.css
@@ -239,17 +239,17 @@
 .characters ul li .text {
   width: 100%;
   height: 160px;
-  clip-path: polygon(0 0, 100% 0, 100% 95%, 95% 100%, 0 100%);
   overflow: hidden;
   border-top: 4px solid #e62429;
   z-index: 3;
   position: relative;
+  font: 400 15px/1.1 RobotoCondensed Bold, Trebuchet MS, Helvetica, Arial,
+    sans-serif;
+  padding: 16px 24px 17px 20px;
 }
-
 .hover-box {
   width: 100%;
   height: 100%;
-  clip-path: polygon(0 0, 100% 0, 100% 95%, 95% 100%, 0 100%);
 }
 .hover-box:before {
   background: #e62429;
@@ -328,7 +328,27 @@
 /* //////// related-movie ///////// */
 .related-movie ul {
   border: 1px solid #d8d8d8;
-  box-shadow: 0 7px 17px -14px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 7px 10px -8px rgba(0, 0, 0, 0.8);
 }
-.related-movie ul li:last-child {
+
+.related-movie ul li .content h2 {
+  font-family: Roboto Bold, Trebuchet MS, Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 28px;
+  text-transform: none;
+}
+.related-movie ul li .content span {
+  color: #767676;
+  font-family: RobotoCondensed Bold, Trebuchet MS, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.related-movie ul li .content p {
+  color: #202020;
+  font-size: 14px;
+  line-height: 1.5;
+  font-family: Roboto, Trebuchet MS, Helvetica, Arial, sans-serif;
+  font-weight: 400;
 }
